[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Img/fondo.jpg" type="Texture" id=3]
[ext_resource path="res://Gameover.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/SHOOT002.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/space.wav" type="AudioStream" id=6]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 542.966, 564.925 )
z_index = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gameover" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 2.52258 )

[node name="AudioStreamPlayer2D_Bala" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2D_Jugando" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true
[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
